--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li> <a href="présentations slam sisr.html"> Présentation des BTS SIO </a> </li>
         <li> <a href="sisr.html"> BTS SISR </a>  </li>
         <li> <a href="slam.html"> BTS SLAM </a> </li>
+        <li> <a href="formulaire.html"> Formulaire test</a></li>
     </ul>
 <h2>PPEs</h2>
 <ul>
